# eoop-school-project

./: .clang-uml  Assigemnt_graded.cpp  Assigemnt_graded.h  Assigment.cpp  Assigment.h  Assigment.test.cpp  Assigment_graded.cpp  Assigment_graded.h  Assigment_graded.test.cpp  CMakeLists.txt  Class.cpp  Class.h  Class.test.cpp  Doxyfile  LICENSE  Person.cpp  Person.h  Person.test.cpp  Preliminatry project.md  README.md  School.cpp  School.h  School.test.cpp  Student.cpp  Student.h  Student.test.cpp  Subject.cpp  Subject.h  Subject.test.cpp  Teacher.cpp  Teacher.h  Teacher.test.cpp  main.cpp
